--- a/frida-subwaysurf-mod/package.json
+++ b/frida-subwaysurf-mod/package.json
@@ -16,6 +16,7 @@
     "@types/node": "^20.8.4",
     "frida-compile": "^16.3.0",
     "frida-il2cpp-bridge": "^0.9.0",
+    "frida-java-menu": "file:../frida-java-menu",
     "typescript": "^5.2.2"
   }
 }
